--- a/src/components/GanttChart.css
+++ b/src/components/GanttChart.css
@@ -1,21 +1,40 @@
 .gantt-chart {
     position: relative;
     width: 100;
-    overflow: auto;
-  }
-  
+    overflow-y: hidden;
+}
+
+.hide-scrollbar::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
+}
+
+.hide-scrollbar {
+  -ms-overflow-style: none; 
+  scrollbar-width: none;  
+}
 .gantt-time-scale {
+  padding-left: 2vw;
+  border-left: 1px solid #ddd;
+}
+  
+.horizontal-scale {
   display: flex;
+}
+
+.gantt-time-scale {
+  min-width: 4vw !important;
+  height: 3vh;
+  border-left: 1px solid #a0a0a0;
 }
   
 .gantt-time-slot {
-  width: 5%;
+  height: 3vh;
+  min-width: 4vw !important;
   text-align: center;
-  border-right: 1px solid #ddd;
 }
   
 .gantt-task {
-  height: 100%;
+  height: 3vh;
   background-color: #3498db;
   color: #fff;
   text-align: center;
@@ -27,4 +46,3 @@
   border: 1px solid #2980b9;
   border-radius: 5px;
 }
-  
