Remove border and update style

--- a/src/components/GanttChart.css
+++ b/src/components/GanttChart.css
@@ -16,23 +16,13 @@
 .horizontal-scale {
   display: flex;
 }
-
-.gantt-time-scale {
-  min-width: 4vw !important;
-  border-top: 1px solid #a0a0a0;
-}
   
 .gantt-time-slot {
-  height: 3vh;
   min-width: 4vw !important;
   text-align: center;
-  box-shadow: 0 -2px 0 #a0a0a0;
 }
 
 .gantt-task {
-  height: 3vh;
-  background-color: #3498db;
-  color: #fff;
   text-align: center;
   line-height: 30px;
   font-size: 14px;
@@ -51,8 +41,6 @@
 
 .category {
   width: 7vw;
-  border: 1px solid #a0a0a0;
-  border-bottom: none;
   display: flex;
   align-items: center;
   overflow: hidden;
@@ -60,7 +48,9 @@
   text-overflow: ellipsis;
 }
 
-.border-bottom-category {
-  width: 7vw;
-  border-top: 2px solid #a0a0a0;
+.bar {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  white-space: nowrap;
 }
